--- a/sections/main-password-header.liquid
+++ b/sections/main-password-header.liquid
@@ -5,7 +5,7 @@
 </style>
 
 <div class="color-{{ section.settings.color_scheme }} gradient">
-  <div class="password-header testando">
+  <div class="password-header">
     {%- if settings.logo != blank -%}
       {%- assign logo_alt = settings.logo.alt | default: shop.name | escape -%}
       {%- assign logo_height = settings.logo_width | divided_by: settings.logo.aspect_ratio -%}
