--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -1,7 +1,6 @@
 <!doctype html>
 <html class="no-js full-height" lang="{{ request.locale.iso_code }}">
   <head>
-    ok
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -201,9 +200,7 @@
 
     {% section 'main-password-header' %}
 
-    <main id="MainContent" class="password-main">
-      {{ content_for_layout }}
-    </main>
+    <main id="MainContent" class="password-main">{{ content_for_layout }}asas</main>
     <footer>
       {% section 'main-password-footer' %}
     </footer>
