--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -200,7 +200,9 @@
 
     {% section 'main-password-header' %}
 
-    <main id="MainContent" class="password-main">{{ content_for_layout }}asas</main>
+    <main id="MainContent" class="password-main">
+      {{ content_for_layout }}
+    </main>
     <footer>
       {% section 'main-password-footer' %}
     </footer>
