--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -1,7 +1,7 @@
 {{ content_for_header }}
 {{ content_for_layout }}
 <style>
-  body {
-    background-color: #ff2244 !important;
+  section {
+    display: none !important;
   }
 </style>
