--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -1,44 +1,36 @@
 {{ content_for_header }}
 {{ content_for_layout }}
 
-
-
-
-
-
-
-
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-<div class="logo"><img src="./logo.webp"></div>
+<div class="logo"><img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/logo.webp?v=1690577055"></div>
 <div class="custombg">
-    <video autoplay loop muted>
-        <source src="./video.mp4" type="video/mp4">
-        <!-- Adicione outras extensões do vídeo aqui para suporte a outros navegadores -->
-    </video>
+  <video autoplay loop muted>
+    <source src="https://cdn.shopify.com/videos/c/o/v/188a68ff73604b5e894f7e296e580662.mp4" type="video/mp4">
+    <!-- Adicione outras extensões do vídeo aqui para suporte a outros navegadores -->
+  </video>
 </div>
 <div class="conteudobreve">
-    <h2>Em breve</h2>
-    <h1>Yow Surf <br> Brasil</h1>
-    <p><b>A YOW Surf Brasil está chegando com tudo.</b> <br>Nossa equipe está trabalhando duro para criar uma experiência única e empolgante para todos os amantes do surf no Brasil.</p>
-    <a href="" class="mybtn"><i class="fab fa-instagram"></i> Acesse nosso Instagram</a>
+  <h2>Em breve</h2>
+  <h1>
+    Yow Surf <br>
+    Brasil
+  </h1>
+  <p>
+    <b>A YOW Surf Brasil está chegando com tudo.</b> <br>
+    Nossa equipe está trabalhando duro para criar uma experiência única e empolgante para todos os amantes do surf no
+    Brasil.
+  </p>
+  <a href="" class="mybtn"><i class="fab fa-instagram"></i> Acesse nosso Instagram</a>
 </div>
-
-
-
-
-
-
-
-
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700;900&display=swap');
 
   body {
-      background-color: #000;
-      font-family: 'Montserrat', sans-serif;
-      color: #fff;
-      overflow: hidden;
+    background-color: #000;
+    font-family: 'Montserrat', sans-serif;
+    color: #fff;
+    overflow: hidden;
   }
 
   .logo {
@@ -48,34 +40,33 @@
     display: flex;
     align-items: center;
     justify-content: center;
+  }
 
-}
-
-.logo img {
+  .logo img {
     width: 150px;
     filter: grayscale(100%) invert(100%);
-}
+  }
 
-.custombg {
+  .custombg {
     width: 100%;
     height: 100%;
-    background-image: url('./Yowsurf08986.JPG');
+    background-image: url('https://cdn.shopify.com/s/files/1/0789/1304/4790/files/Yowsurf08986.jpg?v=1690577010');
     position: absolute;
     background-size: cover;
-    filter: brightness( 100% ) contrast( 100% ) saturate( 100% ) blur( 15px ) hue-rotate( 0deg );
+    filter: brightness(100%) contrast(100%) saturate(100%) blur(15px) hue-rotate(0deg);
     z-index: -1;
-}
+  }
 
-.custombg video {
+  .custombg video {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
+  }
 
-.conteudobreve {
+  .conteudobreve {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -84,45 +75,39 @@
     flex-direction: column;
     text-align: center;
     gap: 20px;
-}
+  }
 
-.conteudobreve h1 {
+  .conteudobreve h1 {
     font-size: 5rem;
     line-height: 5rem;
     text-align: center;
     text-transform: uppercase;
     font-weight: 800;
     color: #fff;
-}
+  }
 
-.conteudobreve h2 {
+  .conteudobreve h2 {
     font-size: 1.3rem;
     text-align: center;
     font-weight: 500;
     text-transform: uppercase;
     letter-spacing: 45px;
-}
+  }
 
-
-
-
-.conteudobreve p {
+  .conteudobreve p {
     font-size: 1.2rem;
     font-weight: 500;
     max-width: 550px;
     margin: 0 auto;
-}
+  }
 
-
-
-
-.mybtn {
+  .mybtn {
     font-size: 0.778em;
-    letter-spacing: .09em;
+    letter-spacing: 0.09em;
     margin-bottom: 20px;
     background: transparent;
     opacity: 0.8;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+    -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=80)';
     filter: alpha(opacity=80);
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
@@ -144,38 +129,31 @@
     color: #fff;
     text-decoration: none;
     margin-top: 30px;
-}
+  }
 
-.mybtn:hover {
+  .mybtn:hover {
     padding: 9px 47px;
   }
 
-
-/* Media Query para telas maiores ou iguais a 700 pixels */
-@media (max-width: 700px) {
+  /* Media Query para telas maiores ou iguais a 700 pixels */
+  @media (max-width: 700px) {
     .conteudobreve h1 {
       font-size: 3.5rem;
       line-height: 3rem;
       padding: 0 15px;
     }
-  
+
     .conteudobreve h2 {
       font-size: 1rem;
       letter-spacing: 15px;
       padding: 0 15px;
     }
-  
+
     .conteudobreve p {
       font-size: 1rem;
       padding: 0 15px;
     }
   }
-
-
-
-
-
-
 
   section {
     display: none !important;
