--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -136,7 +136,7 @@
   }
 
   /* Media Query para telas maiores ou iguais a 700 pixels */
-  @media (max-width: 700px) {
+  @media screen and (max-width: 768px) {
     .conteudobreve h1 {
       font-size: 3.5rem;
       line-height: 3rem;
