--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -1,6 +1,6 @@
 {{ content_for_header }}
 {{ content_for_layout }}
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <div class="logo"><img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/logo.webp?v=1690577055"></div>
 <div class="custombg">
