--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -85,10 +85,13 @@
     text-transform: uppercase;
     font-weight: 800;
     color: #fff;
+    padding: 0;
+    padding: 0;
   }
 
   .conteudobreve h2 {
     font-size: 1.1rem;
+    padding: 0;
   }
 
   .conteudobreve p {
