--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -85,13 +85,14 @@
     text-transform: uppercase;
     font-weight: 800;
     color: #fff;
-    padding: 0;
-    padding: 0;
+    padding: 0 !important;
+    margin: 0 !important;
   }
 
   .conteudobreve h2 {
     font-size: 1.1rem;
-    padding: 0;
+    padding: 0 !important;
+    margin: 0 !important;
   }
 
   .conteudobreve p {
