correção do texto

--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -17,8 +17,7 @@
   </h1>
   <p>
     <b>A YOW Surf Brasil está chegando com tudo.</b> <br>
-    Nossa equipe está trabalhando duro para criar uma experiência única e empolgante para todos os amantes do surf no
-    Brasil.
+    Nossa equipe está trabalhando duro para criar uma experiência única e empolgante para todo vocês.
   </p>
   <a href="" class="mybtn"><i class="fab fa-instagram"></i> Acesse nosso Instagram</a>
 </div>
