--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -10,7 +10,7 @@
   </video>
 </div>
 <div class="conteudobreve">
-  <h2>Em breve</h2>
+  <h2>Em breve!</h2>
   <h1>
     Yow Surf <br>
     Brasil
@@ -92,6 +92,7 @@
     font-size: 1.1rem;
     padding: 0 !important;
     margin: 0 !important;
+    font-weight: 500;
   }
 
   .conteudobreve p {
