--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -140,9 +140,9 @@
   /* Media Query para telas maiores ou iguais a 700 pixels */
   @media screen and (max-width: 768px) {
     .conteudobreve h1 {
-      font-size: 3.5rem;
+      font-size: 3rem;
       line-height: 3rem;
-      padding: 0 15px;
+      padding: 0 15px !important;
     }
 
     .conteudobreve h2 {
@@ -151,7 +151,7 @@
 
     .conteudobreve p {
       font-size: 1rem;
-      padding: 0 15px;
+      padding: 0 15px !important;
     }
   }
 
