remoção do title do hover

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -331,6 +331,22 @@
       };
     </script>
 
+    <script>
+      $(document).ready(function () {
+        // Seletor para encontrar o elemento "a" com a classe "gm-target"
+        $('a.gm-target').each(function () {
+          // Obter o valor do atributo "title"
+          var title = $(this).attr('title');
+
+          // Remover o atributo "title"
+          $(this).removeAttr('title');
+
+          // Definir o valor do atributo "data-title" como o valor do atributo "title" original
+          $(this).attr('data-title', title);
+        });
+      });
+    </script>
+
     {%- if settings.predictive_search_enabled -%}
       <script src="{{ 'predictive-search.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
