--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -332,7 +332,7 @@
     </script>
 
     <script>
-      $('a["title"]').on('mouseenter', function (e) {
+      $('body').on('mouseenter', function (e) {
         e.preventDefault();
       });
     </script>
