removendo link do title

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -332,17 +332,10 @@
     </script>
 
     <script>
-      var anchors = document.querySelectorAll('a[title]');
-      for (let i = anchors.length - 1; i >= 0; i--) {
-        anchors[i].addEventListener('mouseenter', function (e) {
-          anchors[i].setAttribute('data-title', anchors[i].title);
-          anchors[i].removeAttribute('title');
-        });
-        anchors[i].addEventListener('mouseleave', function (e) {
-          anchors[i].title = anchors[i].getAttribute('data-title');
-          anchors[i].removeAttribute('data-title');
-        });
-      }
+      $(document).ready(function () {
+        // Seleciona o elemento com a classe "gm-target" e remove o atributo "title"
+        $('.gm-target').removeAttr('title');
+      });
     </script>
 
     {%- if settings.predictive_search_enabled -%}
