--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,3 +1,22 @@
-body {
-    background-color: red !important;
+:root {
+    --typeHeaderSize: 38px;
+    --typeHeaderWeight: 700;
+    --typeHeaderLineHeight: 1;
+    --typeHeaderSpacing: 0.0em;
+    --typeBaseSize: 16px;
+    --typeBaseWeight: 400;
+    --typeBaseSpacing: 0.025em;
+    --typeBaseLineHeight: 1.6;
+    --typeCollectionTitle: 24px;
+    --iconWeight: 3px;
+    --iconLinecaps: miter;
+    --buttonRadius: 0px;
+    --colorGridOverlayOpacity: 0.2;
 }
+
+
+.h1,.h2,.h3,h1,h2,h3{
+    font-weight:var(--typeHeaderWeight);
+    letter-spacing:var(--typeHeaderSpacing);
+    line-height:var(--typeHeaderLineHeight);
+  }
