--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,22 +1,40 @@
+/* Definindo variáveis globais */
 :root {
-    --typeHeaderSize: 38px;
-    --typeHeaderWeight: 700;
-    --typeHeaderLineHeight: 1;
-    --typeHeaderSpacing: 0.0em;
-    --typeBaseSize: 16px;
-    --typeBaseWeight: 400;
-    --typeBaseSpacing: 0.025em;
-    --typeBaseLineHeight: 1.6;
-    --typeCollectionTitle: 24px;
-    --iconWeight: 3px;
-    --iconLinecaps: miter;
-    --buttonRadius: 0px;
-    --colorGridOverlayOpacity: 0.2;
-}
-
-
-.h1,.h2,.h3,h1,h2,h3{
-    font-weight:var(--typeHeaderWeight);
-    letter-spacing:var(--typeHeaderSpacing);
-    line-height:var(--typeHeaderLineHeight);
+    --cor-primaria: #007bff;
+    --cor-secundaria: #333;
+    --tamanho-titulo-h1: 2.5rem;
+    --tamanho-titulo-h2: 2rem;
+    --tamanho-titulo-h3: 1.5rem;
   }
+  
+  /* Estilos para títulos h1, h2, h3 */
+  h1 {
+    font-size: var(--tamanho-titulo-h1);
+    color: var(--cor-primaria);
+  }
+  
+  h2 {
+    font-size: var(--tamanho-titulo-h2);
+    color: var(--cor-primaria);
+  }
+  
+  h3 {
+    font-size: var(--tamanho-titulo-h3);
+    color: var(--cor-primaria);
+  }
+  
+  /* Estilos para parágrafos */
+  p {
+    color: var(--cor-secundaria);
+  }
+  
+  /* Estilos para botões com a classe .button--primary */
+  .button--primary {
+    background-color: var(--cor-primaria);
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
