--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,7 +1,7 @@
 /* Definindo variáveis globais */
 :root {
-    --cor-primaria: #007bff;
-    --cor-secundaria: #333;
+    --cor-primaria: #000;
+    --cor-secundaria: #000;
     --tamanho-titulo-h1: 2.5rem;
     --tamanho-titulo-h2: 2rem;
     --tamanho-titulo-h3: 1.5rem;
