--- a/assets/custom.css
+++ b/assets/custom.css
@@ -5,22 +5,26 @@
     --tamanho-titulo-h1: 2.5rem;
     --tamanho-titulo-h2: 2rem;
     --tamanho-titulo-h3: 1.5rem;
+    --text-transform-custom: uppercase;
   }
   
   /* Estilos para títulos h1, h2, h3 */
   h1 {
     font-size: var(--tamanho-titulo-h1);
     color: var(--cor-primaria);
+    text-transform: var(--text-transform-custom);
   }
   
   h2 {
     font-size: var(--tamanho-titulo-h2);
     color: var(--cor-primaria);
+    text-transform: var(--text-transform-custom);
   }
   
   h3 {
     font-size: var(--tamanho-titulo-h3);
     color: var(--cor-primaria);
+    text-transform: var(--text-transform-custom);
   }
   
   /* Estilos para parágrafos */
