--- a/assets/custom.css
+++ b/assets/custom.css
@@ -9,36 +9,36 @@
   }
   
   /* Estilos para títulos h1, h2, h3 */
-  h1 {
-    font-size: var(--tamanho-titulo-h1) !important;
-    color: var(--cor-primaria) !important;
-    text-transform: var(--text-transform-custom) !important;
+  body h1 {
+    font-size: var(--tamanho-titulo-h1);
+    color: var(--cor-primaria);
+    text-transform: var(--text-transform-custom);
   }
   
-  h2 {
-    font-size: var(--tamanho-titulo-h2) !important;
-    color: var(--cor-secundaria) !important;
-    text-transform: var(--text-transform-custom) !important;
+  body h2 {
+    font-size: var(--tamanho-titulo-h2);
+    color: var(--cor-secundaria);
+    text-transform: var(--text-transform-custom);
   }
   
-  h3 {
-    font-size: var(--tamanho-titulo-h3) !important;
-    color: var(--cor-secundaria) !important;
-    text-transform: var(--text-transform-custom) !important;
+  body h3 {
+    font-size: var(--tamanho-titulo-h3);
+    color: var(--cor-secundaria);
+    text-transform: var(--text-transform-custom);
   }
   
   /* Estilos para parágrafos */
-  p {
-    color: var(--cor-secundaria) !important;
+  body p {
+    color: var(--cor-secundaria);
   }
   
   /* Estilos para botões com a classe .button--primary */
-  .button--primary {
-    background-color: var(--cor-primaria) !important;
-    color: #fff !important;
-    padding: 10px 20px !important;
-    border: none !important;
-    border-radius: 5px !important;
-    cursor: pointer !important;
+  body  .button--primary {
+    background-color: var(--cor-primaria);
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
   }
   
