--- a/assets/custom.css
+++ b/assets/custom.css
@@ -9,26 +9,23 @@
   }
   
   /* Estilos para títulos h1, h2, h3 */
-  * h1 {
-    font-size: var(--tamanho-titulo-h1);
-    color: var(--cor-primaria);
-    text-transform: var(--text-transform-custom);
+  h1 {
+    font-size: var(--tamanho-titulo-h1) !important;
+    text-transform: var(--text-transform-custom) !important;
   }
   
-  * h2 {
-    font-size: var(--tamanho-titulo-h2);
-    color: var(--cor-secundaria);
-    text-transform: var(--text-transform-custom);
+  h2 {
+    font-size: var(--tamanho-titulo-h2) !important;
+    text-transform: var(--text-transform-custom) !important;
   }
   
-  * h3 {
-    font-size: var(--tamanho-titulo-h3);
-    color: var(--cor-secundaria);
-    text-transform: var(--text-transform-custom);
+  h3 {
+    font-size: var(--tamanho-titulo-h3) !important;
+    text-transform: var(--text-transform-custom) !important;
   }
   
   /* Estilos para parágrafos */
-  * p {
+  p {
     color: var(--cor-secundaria);
   }
   
