--- a/assets/custom.css
+++ b/assets/custom.css
@@ -2,7 +2,7 @@
     --tamanho-titulo-h3: 1.8rem;
   }
 
-h3.card__heading {
+.card__content .card__information h3.card__heading {
     font-weight: 800;
     font-size: var(--tamanho-titulo-h3);
 }
