--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -1,161 +1,77 @@
 {{ content_for_header }}
 {{ content_for_layout }}
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-<div class="logo"><img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/logo.webp?v=1690577055"></div>
-<div class="custombg">
-  <video autoplay loop muted>
-    <source src="https://cdn.shopify.com/videos/c/o/v/188a68ff73604b5e894f7e296e580662.mp4" type="video/mp4">
-    <!-- Adicione outras extensões do vídeo aqui para suporte a outros navegadores -->
-  </video>
-</div>
-<div class="conteudobreve">
-  <h2>Em breve!</h2>
-  <h1>
-    Yow Surf <br>
-    Brasil
-  </h1>
-  <p>
-    <b>A YOW Surf Brasil está chegando com tudo.</b> <br>
-    Nossa equipe está trabalhando duro para criar uma experiência única e empolgante para todo vocês.
-  </p>
-  <a href="" class="mybtn"><i class="fab fa-instagram"></i> Acesse nosso Instagram</a>
-</div>
-
 <style>
-  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700;900&display=swap');
-
-  body {
-    background-color: #000;
-    font-family: 'Montserrat', sans-serif;
-    color: #fff;
-    overflow: hidden;
-    text-align: center;
+  * {
+    margin: 0;
+    padding: 0;
   }
 
-  .logo {
-    position: absolute;
-    top: 30px;
+  img {
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
   }
 
-  .logo img {
-    width: 150px;
-    filter: grayscale(100%) invert(100%);
-  }
-
-  .custombg {
-    width: 100%;
-    height: 100%;
-    background-image: url('https://cdn.shopify.com/s/files/1/0789/1304/4790/files/Yowsurf08986.jpg?v=1690577010');
-    position: absolute;
-    background-size: cover;
-    filter: brightness(100%) contrast(100%) saturate(100%) blur(15px) hue-rotate(0deg);
-    z-index: -1;
-  }
-
-  .custombg video {
+  .soon-main {
     position: absolute;
     top: 0;
-    left: 0;
     width: 100%;
-    height: 100%;
-    object-fit: cover;
   }
 
-  .conteudobreve {
-    width: 100%;
-    height: 100vh;
+  .soon-container {
+    max-width: 1140px;
+    display: block;
+    margin: 0 auto;
+  }
+
+  .flex-soon {
     display: flex;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-    gap: 20px;
+    justify-content: space-between;
   }
 
-  .conteudobreve h1 {
-    font-size: 5rem;
-    line-height: 5rem;
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: 800;
-    color: #fff;
-    padding: 0 !important;
-    margin: 0 !important;
+  .selo {
+    width: 400px;
+    padding-top: 300px;
   }
-
-  .conteudobreve h2 {
-    font-size: 1.1rem;
-    padding: 0 !important;
-    margin: 0 !important;
-    font-weight: 500;
+  .selo img {
+    animation: rotate 20s linear infinite;
   }
-
-  .conteudobreve p {
-    font-size: 1rem;
-    font-weight: 500;
-    max-width: 550px;
-    margin: 0 auto;
-    line-height: 25px;
+  .soon-form {
+    width: 100%;
+    margin: 200px 0;
   }
-
-  .mybtn {
-    font-size: 0.778em;
-    letter-spacing: 0.09em;
-    margin-bottom: 20px;
-    background: transparent;
-    opacity: 0.8;
-    -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=80)';
-    filter: alpha(opacity=80);
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    -ms-border-radius: 0;
-    border-radius: 0;
-    font-weight: 700;
-    border: 0;
-    border-left: 2px solid;
-    border-right: 2px solid;
-    padding: 9px 27px;
-    position: relative;
-    text-align: center;
-    text-transform: uppercase;
-    -webkit-transition: opacity 0.3s, padding 0.3s;
-    -moz-transition: opacity 0.3s, padding 0.3s;
-    -ms-transition: opacity 0.3s, padding 0.3s;
-    -o-transition: opacity 0.3s, padding 0.3s;
-    transition: opacity 0.3s, padding 0.3s;
-    color: #fff;
-    text-decoration: none;
-    margin-top: 30px;
-  }
-
-  .mybtn:hover {
-    padding: 9px 47px;
-  }
-
-  /* Media Query para telas maiores ou iguais a 700 pixels */
-  @media screen and (max-width: 768px) {
-    .conteudobreve h1 {
-      font-size: 3rem;
-      line-height: 3rem;
-      padding: 0 15px !important;
+  @keyframes rotate {
+    from {
+      transform: rotate(0deg); /* Ângulo inicial de rotação */
     }
-
-    .conteudobreve h2 {
-      font-size: 1rem;
-    }
-
-    .conteudobreve p {
-      font-size: 1rem;
-      padding: 0 15px !important;
+    to {
+      transform: rotate(360deg); /* Ângulo final de rotação (uma volta completa) */
     }
   }
 
-  section {
-    display: none !important;
+  @media (max-width: 700px) {
+    .flex-soon {
+      flex-direction: column;
+      align-items: end;
+      padding: 0 15px;
+    }
+    .selo {
+      width: 120px;
+      padding-top: 3em;
+      padding-right: 3em;
+    }
   }
 </style>
+
+<img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/bg.webp?v=1690900374">
+<div class="soon-main">
+  <div class="soon-container">
+    <div class="flex-soon">
+      <div></div>
+      <div class="selo">
+        <img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/SELO_AMARELO.png?v=1690900278">
+      </div>
+    </div>
+    <div class="soon-form"></div>
+  </div>
+</div>
