--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -10,7 +10,9 @@
   img {
     width: 100%;
   }
-
+  #shopify-section-template--20260907090230__main {
+    display: none !important;
+  }
   .soon-main {
     position: absolute;
     top: 0;
