--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -1,6 +1,7 @@
 {{ content_for_header }}
 {{ content_for_layout }}
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>YOW SURF - BRASIL</title>
 <style>
   * {
     margin: 0;
