--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -75,6 +75,8 @@
         <img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/SELO_AMARELO.png?v=1690900278">
       </div>
     </div>
-    <div class="soon-form">Form</div>
+    <div class="soon-form">
+      {% include 'newsletter' %}
+    </div>
   </div>
 </div>
