--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -76,7 +76,7 @@
       </div>
     </div>
     <div class="soon-form">
-      {% include 'newsletter' %}
+      {% include 'sections/newsletter' %}
     </div>
   </div>
 </div>
