--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -76,6 +76,10 @@
       </div>
     </div>
     <div class="soon-form">
+      <img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/Layer_20.png?v=1690911428">
+      <img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/WHATSAPP.png?v=1690911327">
+      <img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/instagram.png?v=1690911327">
+
       {% form 'contact' %}
         {{ form.errors | default_errors }}
 
