--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -22,6 +22,7 @@
 
   .soon-container {
     max-width: 1140px;
+    width: 100%;
     display: block;
     margin: 0 auto;
   }
@@ -33,7 +34,8 @@
   }
 
   .selo {
-    width: 400px;
+    max-width: 400px;
+    width: 100%;
     padding-top: 300px;
   }
   .selo img {
@@ -42,6 +44,9 @@
   .soon-form {
     width: 100%;
     margin: 200px 0;
+  }
+  .titlebanner {
+    max-width: 500px;
   }
   @keyframes rotate {
     from {
@@ -76,9 +81,15 @@
       </div>
     </div>
     <div class="soon-form">
-      <img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/Layer_20.png?v=1690911428">
-      <img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/WHATSAPP.png?v=1690911327">
-      <img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/instagram.png?v=1690911327">
+      <div class="titlebanner">
+        <img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/Layer_20.png?v=1690911428">
+      </div>
+      <div class="what">
+        <img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/WHATSAPP.png?v=1690911327">
+      </div>
+      <div class="insta">
+        <img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/instagram.png?v=1690911327">
+      </div>
 
       {% form 'contact' %}
         {{ form.errors | default_errors }}
