--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -48,6 +48,11 @@
   .titlebanner {
     max-width: 500px;
   }
+  .what,
+  .insta {
+    max-width: 200px;
+    width: 100%;
+  }
   @keyframes rotate {
     from {
       transform: rotate(0deg); /* Ângulo inicial de rotação */
