--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -32,7 +32,9 @@
     align-items: center;
     justify-content: space-between;
   }
-
+  .customheader {
+    height: 100vh;
+  }
   .selo {
     max-width: 400px;
     width: 100%;
@@ -79,12 +81,14 @@
 <img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/bg.webp?v=1690900374">
 <div class="soon-main">
   <div class="soon-container">
-    <div class="flex-soon">
-      <div></div>
-      <div class="selo">
-        <img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/SELO_AMARELO.png?v=1690900278">
+    <div class="customheader">
+      <div class="flex-soon">
+        <div></div>
+        <div class="selo">
+          <img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/SELO_AMARELO.png?v=1690900278">
+        </div>
       </div>
-    </div>
+      <div>
     <div class="soon-form">
       {% form 'contact' %}
         {{ form.errors | default_errors }}
@@ -100,7 +104,7 @@
         </div>
 
         <div class="message" style="visibility: hidden;">
-          <label for="message">Message</label>
+          <label for="message">Mensagem</label>
           <textarea name="contact[body]" id="message"></textarea>
         </div>
 
