--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -88,7 +88,7 @@
           <img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/SELO_AMARELO.png?v=1690900278">
         </div>
       </div>
-      <div>
+    </div>
     <div class="soon-form">
       {% form 'contact' %}
         {{ form.errors | default_errors }}
