--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -47,9 +47,42 @@
     width: 100%;
     margin: 200px 0;
   }
-  .titlebanner {
-    max-width: 500px;
+  label {
+    font-size: 3em;
+    font-weight: 900;
+    text-transform: uppercase;
   }
+
+  .soon-form input {
+    border: none;
+    box-shadow: none;
+    border-radius: 0;
+    background: rgba(255, 255, 255, 0.1);
+    color: #fff;
+    height: auto;
+    padding: 14px;
+    margin-bottom: 30px;
+    resize: none;
+  }
+  .soon-form input {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    -webkit-transition: border-color ease-in-out 0.15s, -webkit-box-shadow ease-in-out 0.15s;
+    -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+  }
+
   .what,
   .insta {
     max-width: 200px;
