--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -47,7 +47,13 @@
     width: 100%;
     margin: 200px 0;
   }
-  label {
+  .soon-form form {
+    background: white;
+    padding: 50px;
+    max-width: 500px;
+    margin: 0 auto;
+  }
+  .soon-form label {
     font-size: 3em;
     font-weight: 900;
     text-transform: uppercase;
