--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -142,7 +142,7 @@
           <input type="email" name="contact[email]" id="email">
         </div>
 
-        <div class="message" style="visibility: hidden;">
+        <div class="message" style="visibility: hidden;position: absolute;z-index: -1;">
           <label for="message">Mensagem</label>
           <textarea name="contact[body]" id="message"></textarea>
         </div>
