--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -48,45 +48,27 @@
     margin: 200px 0;
   }
   .soon-form form {
-    background: white;
-    padding: 50px;
-    max-width: 500px;
-    margin: 0 auto;
+    cursor: pointer;
+    transition: 0.2s;
+    box-shadow: 0 0.3rem 0.3rem rgba(0, 0, 0, 0.075) !important;
+    padding: 40px;
+    border-radius: 6px;
+    border: none;
+    background-color: #fff;
   }
   .soon-form label {
-    font-size: 3em;
-    font-weight: 900;
-    text-transform: uppercase;
+    display: none;
   }
 
   .soon-form input {
-    border: none;
-    box-shadow: none;
-    border-radius: 0;
-    background: rgba(255, 255, 255, 0.1);
-    color: #fff;
-    height: auto;
-    padding: 14px;
-    margin-bottom: 30px;
-    resize: none;
-  }
-  .soon-form input {
-    display: block;
-    width: 100%;
-    height: 34px;
-    padding: 6px 12px;
+    padding: 7px 15px;
     font-size: 14px;
-    line-height: 1.42857143;
-    color: #555;
-    background-color: #fff;
-    background-image: none;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    -webkit-transition: border-color ease-in-out 0.15s, -webkit-box-shadow ease-in-out 0.15s;
-    -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+    background-color: #e9ecf1;
+    border: 1px solid #e9ecf1;
+    border-radius: 3px;
+    color: #293c5b;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400 !important;
   }
 
   .what,
