--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -117,12 +117,12 @@
 
         <div class="first-name">
           <label for="first-name">Nome</label>
-          <input type="text" name="contact[first_name]" id="first-name">
+          <input type="text" name="contact[first_name]" id="first-name" placeholder="Nome">
         </div>
 
         <div class="email">
           <label for="email">E-mail</label>
-          <input type="email" name="contact[email]" id="email">
+          <input type="email" name="contact[email]" id="email" placeholder="E-mail">
         </div>
 
         <div class="message" style="visibility: hidden;position: absolute;z-index: -1;">
