--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -55,6 +55,10 @@
     border-radius: 6px;
     border: none;
     background-color: #fff;
+    max-width: 500px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
   }
   .soon-form label {
     display: none;
