--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -65,15 +65,28 @@
   }
 
   .soon-form input {
-    width: 100%;
-    padding: 7px 15px;
+    height: auto;
+    border-radius: 40px;
+    border: 1px solid #dedada;
+    box-shadow: none;
+    padding: 10px 20px 10px 46px;
     font-size: 14px;
-    background-color: #e9ecf1;
-    border: 1px solid #e9ecf1;
-    border-radius: 3px;
-    color: #293c5b;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400 !important;
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    -webkit-transition: border-color ease-in-out 0.15s, -webkit-box-shadow ease-in-out 0.15s;
+    -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   }
 
   .what,
