--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -89,6 +89,20 @@
     transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
   }
 
+  .submit input {
+    border: none;
+    color: #fff;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 500;
+    background: #f4605c;
+    text-transform: uppercase;
+    padding: 13px 30px;
+    border-radius: 40px;
+    margin-top: 20px;
+    transition: all 0.3s;
+  }
+
   .what,
   .insta {
     max-width: 200px;
