--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -3,9 +3,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>YOW SURF - BRASIL</title>
 <style>
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;900&display=swap');
+
   * {
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
   }
 
   img {
