--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -62,6 +62,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    margin: 0 auto;
   }
   .soon-form label {
     display: none;
@@ -104,6 +105,7 @@
     border-radius: 40px;
     margin-top: 20px;
     transition: all 0.3s;
+    height: auto;
   }
 
   .what,
