--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -148,6 +148,7 @@
       </div>
     </div>
     <div class="soon-form">
+      <img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/Layer_20.png?v=1690911428">
       {% form 'contact' %}
         {{ form.errors | default_errors }}
 
