--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -65,7 +65,14 @@
     margin: 0 auto;
   }
   .soon-form label {
-    display: none;
+  }
+
+  .first-name,
+  .email {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
   }
 
   .soon-form input {
