--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -51,20 +51,13 @@
     margin: 200px 0;
   }
   .soon-form form {
-    cursor: pointer;
-    transition: 0.2s;
-    box-shadow: 0 0.3rem 0.3rem rgba(0, 0, 0, 0.075) !important;
-    padding: 40px;
-    border-radius: 6px;
-    border: none;
-    background-color: #fff;
-    max-width: 500px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin: 0 auto;
   }
   .soon-form label {
+    font-weight: 600;
+    font-size: 2em;
+    display: block;
+    width: 13%;
+    text-transform: uppercase;
   }
 
   .first-name,
