--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -66,46 +66,35 @@
     align-items: center;
     justify-content: center;
     gap: 20px;
+    margin: 15px 0;
   }
 
   .soon-form input {
-    height: auto;
-    border-radius: 40px;
-    border: 1px solid #dedada;
-    box-shadow: none;
-    padding: 10px 20px 10px 46px;
-    font-size: 14px;
     display: block;
     width: 100%;
-    height: 34px;
     padding: 6px 12px;
     font-size: 14px;
     line-height: 1.42857143;
-    color: #555;
-    background-color: #fff;
+    color: #ffd900;
+    background-color: #000;
     background-image: none;
-    border: 1px solid #ccc;
+    border: none;
     border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    -webkit-transition: border-color ease-in-out 0.15s, -webkit-box-shadow ease-in-out 0.15s;
-    -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+    height: 50px;
   }
 
   .submit input {
     border: none;
-    color: #fff;
+    color: #000;
     display: inline-block;
-    font-size: 14px;
-    font-weight: 500;
-    background: #f4605c;
+    background: #e8c500;
     text-transform: uppercase;
     padding: 13px 30px;
-    border-radius: 40px;
     margin-top: 20px;
     transition: all 0.3s;
     height: auto;
+    font-size: 1rem;
+    font-weight: 600;
   }
 
   .what,
