--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -51,12 +51,14 @@
     margin: 200px 0;
   }
   .soon-form form {
+    max-width: 700px;
+    margin: 0 auto;
   }
   .soon-form label {
     font-weight: 700;
     font-size: 2em;
     display: block;
-    width: 13%;
+    width: 25%;
     text-transform: uppercase;
   }
 
