--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -165,6 +165,11 @@
           <input type="submit" value="Enviar">
         </div>
       {% endform %}
+
+      <img
+        style="max-width: 790px;margin: 0 auto;display: block;width: 100%;margin-bottom: 80px"
+        src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/WHATSAPP.png?v=1690911327"
+      >
     </div>
   </div>
 </div>
