--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -99,6 +99,13 @@
     font-weight: 600;
   }
 
+  .socialicons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 80px;
+    margin: 80px 0;
+  }
   .what,
   .insta {
     max-width: 200px;
@@ -166,10 +173,16 @@
         </div>
       {% endform %}
 
-      <img
-        style="max-width: 790px;margin: 0 auto;display: block;width: 100%;margin-bottom: 80px"
-        src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/WHATSAPP.png?v=1690911327"
-      >
+      <div class="socialicons">
+        <img
+          style="max-width: 229px;"
+          src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/WHATSAPP.png?v=1690911327"
+        >
+        <img
+          style="max-width: 229px;"
+          src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/WHATSAPP.png?v=1690911327"
+        >
+      </div>
     </div>
   </div>
 </div>
