--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -172,15 +172,15 @@
           <input type="submit" value="Enviar">
         </div>
       {% endform %}
-
+      <img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/social2.png?v=1691016528">
       <div class="socialicons">
         <img
           style="max-width: 229px;"
           src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/WHATSAPP.png?v=1690911327"
         >
         <img
-          style="max-width: 229px;"
-          src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/WHATSAPP.png?v=1690911327"
+          style="max-width: 273px;"
+          src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/instagram.png?v=1690911327"
         >
       </div>
     </div>
