--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -172,7 +172,15 @@
           <input type="submit" value="Enviar">
         </div>
       {% endform %}
-      <img src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/social2.png?v=1691016528">
+      <img
+        style="
+          max-width: 402px;
+          margin: 0 auto;
+          display: block;
+          margin-top: 80px;
+        "
+        src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/social2.png?v=1691016528"
+      >
       <div class="socialicons">
         <img
           style="max-width: 229px;"
