--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -182,14 +182,17 @@
         src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/social2.png?v=1691016528"
       >
       <div class="socialicons">
-        <img
-          style="max-width: 229px;"
-          src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/WHATSAPP.png?v=1690911327"
-        >
-        <img
-          style="max-width: 273px;"
-          src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/instagram.png?v=1690911327"
-        >
+        <a href="#"
+          ><img
+            style="max-width: 229px;"
+            src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/WHATSAPP.png?v=1690911327"
+        ></a>
+
+        <a target="_blank" href="https://instagram.com/yowsurf_brasil?igshid=MzRlODBiNWFlZA=="
+          ><img
+            style="max-width: 273px;"
+            src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/instagram.png?v=1690911327"
+        ></a>
       </div>
     </div>
   </div>
