--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -41,10 +41,10 @@
   .selo {
     max-width: 400px;
     width: 100%;
-    padding-top: 300px;
+    padding-top: 170px;
   }
   .selo img {
-    animation: rotate 20s linear infinite;
+    transform: rotate(340deg);
   }
   .soon-form {
     width: 100%;
