--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -36,7 +36,7 @@
     justify-content: space-between;
   }
   .customheader {
-    height: 100vh;
+    min-height: 800px;
   }
   .selo {
     max-width: 400px;
