--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -35,8 +35,10 @@
     align-items: center;
     justify-content: space-between;
   }
-  .customheader {
-    min-height: 800px;
+  @media (min-width: 800px) {
+    .customheader {
+      min-height: 800px;
+    }
   }
   .selo {
     max-width: 400px;
