--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -133,6 +133,12 @@
       padding-top: 3em;
       padding-right: 3em;
     }
+    form {
+      background: #fff;
+      padding: 2rem;
+      margin: 1rem;
+      border-radius: 10px;
+    }
   }
 </style>
 
