--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -136,7 +136,7 @@
     form {
       background: #fff;
       padding: 2rem;
-      margin: 1rem;
+      margin: 1rem !important;
       border-radius: 10px;
     }
   }
