--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -139,6 +139,10 @@
       margin: 1rem !important;
       border-radius: 10px;
     }
+    .first-name,
+    .email {
+      flex-direction: column;
+    }
   }
 </style>
 
