--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -146,6 +146,9 @@
     label {
       width: 100%;
     }
+    .socialimg {
+      max-width: 320px;
+    }
   }
 </style>
 
@@ -188,6 +191,7 @@
         </div>
       {% endform %}
       <img
+        class="socialimg"
         style="
           max-width: 402px;
           margin: 0 auto;
