--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -144,10 +144,14 @@
       flex-direction: column;
     }
     label {
-      width: 100%;
+      width: 100% !important;
     }
     .socialimg {
       max-width: 320px;
+    }
+    .socialicons {
+      flex-direction: column;
+      gap: 30px;
     }
   }
 </style>
