--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -153,6 +153,10 @@
       flex-direction: column;
       gap: 30px;
     }
+    .firstimg {
+      max-width: 320px;
+      margin-bottom: -50px;
+    }
   }
 </style>
 
@@ -169,6 +173,7 @@
     </div>
     <div class="soon-form">
       <img
+        class="firstimg"
         style="max-width: 790px;margin: 0 auto;display: block;width: 100%;margin-bottom: 80px"
         src="https://cdn.shopify.com/s/files/1/0789/1304/4790/files/Layer_20.png?v=1690911428"
       >
