--- a/sections/custom_block.liquid
+++ b/sections/custom_block.liquid
@@ -1,33 +1,30 @@
-<!-- custom_block.liquid -->
+<!-- Welcome section starts -->
+<section class="welcome">
+  <div class="container">
+    <div class="welcome-outter">
+      <h2 class="section-heading">Heading 1</h2>
+      <h1 class="section-large-heading">Heading 2</h1>
+      <p class="discription">Lorem ipsum is placeholder text commonly used...</p>
+    </div>
+    <div class="col-xs-12 col-md-12 text-center">
+      <button class="view-btn"><a href="">read more</a></button>
+    </div>
+  </div>
+</section>
+<!-- Welcome section ends -->
 {% schema %}
 {
-  "name": "Custom Block",
-  "settings": [
-    {
-      "type": "text",
-      "label": "Título",
-      "id": "title",
-      "default": "Meu Bloco Personalizado"
-    },
-    {
-      "type": "textarea",
-      "label": "Descrição",
-      "id": "description",
-      "default": "Esta é uma descrição do meu bloco personalizado."
-    }
-  ],
+  "name": "Section name",
+  "settings": [],
   "presets": [
     {
-      "name": "Padrão",
-      "category": "Personalizado"
+      "name": "Welcome section Test",
+      "category": "ADVANCED LAYOUT"
     }
   ]
 }
 {% endschema %}
-
-]
-
-<div class="custom-block">
-  <h2>{{ section.settings.title }}</h2>
-  <p>{{ section.settings.description }}</p>
-</div>
+{% stylesheet %}
+{% endstylesheet %}
+{% javascript %}
+{% endjavascript %}
