--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -155,9 +155,10 @@
                       {%- endif -%}
                     </div>
                 {%- endcase -%}
+                <p>teste1</p>
               </div>
+              <p>teste2</p>
             {%- endfor -%}
-            <p>teste</p>
           </div>
         {%- endif -%}
 
