--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -157,7 +157,17 @@
                 {%- endcase -%}
               </div>
             {%- endfor -%}
+
             <p>teste3</p>
+            {%- liquid
+              if section.settings.menu != blank
+                if section.settings.menu_type_desktop == 'dropdown'
+                  render 'header-dropdown-menu'
+                elsif section.settings.menu_type_desktop != 'drawer'
+                  render 'header-mega-menu'
+                endif
+              endif
+            %}
           </div>
         {%- endif -%}
 
