--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -157,6 +157,7 @@
                 {%- endcase -%}
               </div>
             {%- endfor -%}
+            <p>teste3</p>
           </div>
         {%- endif -%}
 
