--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -223,9 +223,7 @@
               </div>
             {%- endif -%}
 
-            {%- if section.settings.show_social and has_social_icons -%}
-              {%- render 'social-icons', class: 'footer__list-social' -%}
-            {%- endif -%}
+            aqui
           </div>
         {%- endif -%}
 
