--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -162,6 +162,7 @@
               <div class="footer-block__newsletter">
                 {%- if section.settings.newsletter_heading != blank -%}
                   <h2 class="footer-block__heading inline-richtext">INSCREVA-SE E ECONOMIZE</h2>
+                  <p>Assine para receber ofertas especiais, brindes gratuitos e ofertas únicas.</p>
                 {%- endif -%}
                 {%- form 'customer', id: 'ContactFooter', class: 'footer__newsletter newsletter-form' -%}
                   <input type="hidden" name="contact[tags]" value="newsletter">
