--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -231,6 +231,7 @@
         {%- endif -%}
 
         <div
+          style="display: none!important"
           class="footer-block--newsletter{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
           {% if settings.animations_reveal_on_scroll %}
             data-cascade
