--- a/assets/custom.css
+++ b/assets/custom.css
@@ -17,11 +17,13 @@
   width: 100%;
 }
 
-.footer__blocks-wrapper.grid .footer-block.grid__item h2.footer-block__heading {
+.footer__blocks-wrapper.grid .footer-block.grid__item h2.footer-block__heading, .footer-block__newsletter h2.footer-block__heading{
   text-transform: uppercase;
   letter-spacing: 0.3em;
   font-size: 0.75em;
 }
+
+
 
 .footer__blocks-wrapper.grid .footer-block.grid__item a {
   color:#fff;
