--- a/assets/custom.css
+++ b/assets/custom.css
@@ -34,3 +34,14 @@
   color:#fff;
   text-decoration: none;
 }
+
+ul.list-unstyled.list-social.footer__list-social {
+  align-items: center;
+  justify-content: start;
+  padding: 15px 0; 
+}
+
+ul.list-unstyled.list-social.footer__list-social .list-social__item .icon {
+  height: 2.8rem;
+  width: 2.8rem;
+} 
