--- a/sections/custom_block.liquid
+++ b/sections/custom_block.liquid
@@ -1,5 +1,5 @@
 <!-- Welcome section starts -->
-<section class="welcome">
+<section class="welcome  aaa">
   <div class="container">
     <div class="welcome-outter">
       <h2 class="section-heading">Heading 1</h2>
